finally fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -23,12 +23,22 @@ body {
     background-color: white;
     border: 1px solid black;
     padding: 0;
+    font-size: 1vw;
+    display: inline-block;
+}
+
+.key::before {
+    clear: both;
+    content: "";
+  display: table;
+  margin-top: -1px;
+  height: 0;
 }
 
 .key > div {
     margin: 0;
+    flex-direction: column;
     padding: 0;
-    overflow: hidden;
 }
 
 .key > p {
@@ -42,6 +52,10 @@ body {
 ¯
 .w-1 {
     width: 1vw; 
+}
+
+.w-2 {
+    width: 2vw;
 }
 
 .w-4 {
@@ -66,4 +80,9 @@ body {
 .w-9 {
     border-radius: calc(17%*(4/9))/17%;
     width: 9vw;
+}
+
+.w-10 {
+    border-radius: calc(17%*(4/10))/17%;
+    width: 10vw;
 }
